# puckers

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-binaries.yml  rust.yml
docs/: development.md
literature/: cartesian_coordinates.csv  equidistant_distribution_globe.py  spherical_coordinates.csv
src/: arguments.rs  fivering.rs  lib.rs  main.rs  peptide.rs  peptipde.rs  torsion_typing.rs
src/fivering/: mod.rs
src/peptide/: mod.rs
src/sixring/: equidistance_globe.rs  equidistance_sphere.rs  geometry.rs  local_elevation.rs  mod.rs  mol_math.rs  reconstruct_ring.rs  ring_partition.rs
tests/: fivering.rs  geometry.rs  main  main.rs  peptide.rs  sixring.rs  sixring.xyz  sixring2.xyz  test.alphas  test.coordinatesixring  test.elevation  test.fivering  test.geomcenter  test.globe  test.peptide  test.sixring  test.sphericals
